--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body class="bg-green-800 p-8">
   <div class="flex justify-center">
-    <button id="generate" class="bg-blue-500 text-white px-4 py-2 rounded mb-8">
+    <button id="generate" class="bg-blue-500 text-white px-4 py-2 rounded mb-8 select-none">
       刷新
     </button>
   </div>
